Adding home/search page

--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -54,7 +54,7 @@
     
     <footer>
         <div class="bottomHome">
-            <a href="/landingpage.html">Home</a> <br>
+            <a href="/unnamed-incorporated/HomePage.html">Home</a> <br>
         </div>
         <div class="bottomInfo">
             <a href="/infopage.html">Info</a> <br>
