--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -40,7 +40,7 @@
     
     <body>
     <div class="topSign">
-        <a href="/signin.html">Sign In</a> <br>
+        <a href="/unnamed-incorporated/SignIn.html">Sign In</a> <br>
     </div>
 
     <div class="center" >
@@ -57,10 +57,10 @@
             <a href="/unnamed-incorporated/HomePage.html">Home</a> <br>
         </div>
         <div class="bottomInfo">
-            <a href="/infopage.html">Info</a> <br>
+            <a href="/unnamed-incorporated/InfoPage.html">Info</a> <br>
         </div>
         <div class="bottomFood">
-            <a href="/foodpage.html">Restaurants</a> <br>
+            <a href="/unnamed-incorporated/FoodPage.html">Restaurants</a> <br>
         </div>
     </footer>
     </body>
