Trying to make it look better

--- a/unnamed-incorporated/WebContent/FoodPage.html
+++ b/unnamed-incorporated/WebContent/FoodPage.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="basic.css">
     <style>
         .info {
-            width: 100%;
+            width: 95%;
             display: flex;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 50px;
 
         }
 
@@ -15,6 +18,7 @@
             float: left;
             height: auto;
             flex: 1;
+            border-style: solid;
 
         }
 
@@ -44,6 +48,7 @@
         }
 
         .res {
+            bottom: 40px;
             padding: 10px 10px;
             margin-left: auto;
             margin-right: auto;
@@ -52,7 +57,7 @@
 
         .res a {
             background: #020202;
-            
+
             color: white;
             display: block;
             padding: 10px 20px;
@@ -69,6 +74,7 @@
 
         <a href="/unnamed-incorporated/SignIn.html">Sign In</a>
     </div>
+
     <div class="info">
         <a class="desc">Hello and welcome to this Restaurant</a>
         <a class="menu">
@@ -101,6 +107,7 @@
 
         </a>
     </div>
+
     <div class="res center">
         <a href="/unnamed-incorporated/reservation">Make a Reservation</a>
     </div>
