--- a/unnamed-incorporated/WebContent/FoodPage.html
+++ b/unnamed-incorporated/WebContent/FoodPage.html
@@ -3,22 +3,29 @@
 
 <head>
     <link rel="stylesheet" href="basic.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <style>
+        body{
+            font-family: 'Montserrat', sans-serif;
+        }
         .info {
             width: 95%;
             display: flex;
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 50px;
+            box-shadow: 6px 6px 8px 2px #888888;
 
         }
 
         .info a {
-            font-family: Arial, Helvetica, sans-serif;
             float: left;
             height: auto;
             flex: 1;
             border-style: solid;
+            padding: 5px 5px;
+        
 
         }
 
@@ -32,6 +39,7 @@
         .info a.desc {
             background-color: rgb(200, 200, 200);
             max-width: 20%;
+            border-right: 0px;
 
         }
 
@@ -39,6 +47,7 @@
 
             background-color: rgb(150, 150, 150);
             max-width: 50%;
+            border-right: 0px;
 
         }
 
