--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            .center {
-                padding: 70px 0;
-                text-align: center;
-                font-size: 50px;
-            }
 
-            .bottomHome {
-                position: absolute;
-                bottom: 50px;
-                left: 500px;
-                font-size: 30px;
-            }
+<head>
+    <link rel="stylesheet" href="basic.css">
+    <link rel="stylesheet" href="basic.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+        }
+    </style>
+</head>
 
-            .bottomInfo {
-                position: absolute;
-                bottom: 50px;
-                left: 750px;
-                font-size: 30px;
-            }
-
-            .bottomFood {
-                position: absolute;
-                bottom: 50px;
-                right: 450px;
-                font-size: 30px;
-            }
-
-            .topSign {
-                position: absolute;
-                top: 50px;
-                right: 100px;
-                font-size: 20px;
-            }
-        </style>
-    </head>
-    
-    <body>
+<body>
     <div class="topSign">
         <a href="/unnamed-incorporated/SignIn.html">Sign In</a> <br>
     </div>
 
-    <div class="center" >
+    <div class="center">
         <h1>Search</h1>
         <form action="InsertContact" method="POST">
             <input type="text" name="keyword"> <br />
@@ -51,17 +26,16 @@
             <input type="submit" value="Search" />
         </form>
     </div>
-    
-    <footer>
-        <div class="bottomHome">
-            <a href="/unnamed-incorporated/HomePage.html">Home</a> <br>
-        </div>
-        <div class="bottomInfo">
-            <a href="/unnamed-incorporated/InfoPage.html">Info</a> <br>
-        </div>
-        <div class="bottomFood">
-            <a href="/unnamed-incorporated/FoodPage.html">Restaurants</a> <br>
-        </div>
-    </footer>
-    </body>
+
+    <div class="nav">
+
+        <a class="active" href="/unnamed-incorporated/HomePage.html">Home</a>
+
+        <a href="/unnamed-incorporated/InfoPage.html">Info</a>
+
+        <a href="/unnamed-incorporated/FoodPage.html">Restaurants</a>
+
+    </div>
+</body>
+
 </html>
