Changed Nav Bar

--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -33,7 +33,7 @@
 
         <a href="/unnamed-incorporated/InfoPage.html">Info</a>
 
-        <a href="/unnamed-incorporated/FoodPage.html">Restaurants</a>
+        <a href="/unnamed-incorporated/ResturantPage">Restaurants</a>
 
     </div>
 </body>
