--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -48,7 +48,7 @@
 		    		<a href="/unnamed-incorporated/InfoPage.html">Info</a>
 		    	</div>
 		    	<div style="float:right; padding:15px; width:calc(33%); text-align:center">
-		    		<a href="/unnamed-incorporated/FoodPage.html">Restaurants</a>
+		    		<a href="/unnamed-incorporated/ResturantPage">Restaurants</a>
 		    	</div>
 		    </div>
 		</div>
