Reservation tweeks and User model added

--- a/unnamed-incorporated/WebContent/FoodPage.html
+++ b/unnamed-incorporated/WebContent/FoodPage.html
@@ -135,7 +135,7 @@
         <strong>Make a Reservation</strong>
         <form name="reservationForm" method="post" action="MakeReservation">
         	<input type="hidden" id="restID" name="restID" value="Test1">
-        	<input type="hidden" id="restID" name="restID" value="Test1">
+        	<input type="hidden" id="custUsrName" name="custUsrName" value="Test1">
         	<label for="date"> Date: </label>
         	<input type="date" id="date" name="date">
         	<label for="time"> Time: </label>
