--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -19,9 +19,9 @@
     </div>
 
     <div class="center">
-        <h1>Search</h1>
+        <h1>Remote Reservation Services</h1>
         <form action="InsertContact" method="POST">
-            <input type="text" name="keyword"> <br />
+            <input type="text" name="keyword" style="width: 600px; height=60px;" size="20"> <br />
 
             <input type="submit" value="Search" />
         </form>
