Sign in functionality Added

--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -101,9 +101,9 @@
 		    	<div style="padding:calc(5%); border:1px solid black">
 		    		<h2>Sign In</h2>
 		    		<form action="SignIn" method="POST">
-		    			<input type="radio" id="userIn" name="loginType">
+		    			<input type="radio" id="userIn" name="loginType" value="0">
 		    			<label for="userIn">User</label>
-		    			<input type="radio" id="restaurantIn" name="loginType">
+		    			<input type="radio" id="restaurantIn" name="loginType" value="1">
 		    			<label for="restaurantIn">Restaurant</label> <br> <br>
 		    			Username: <br>
 		    			<input type="text" name="usernameIn"> <br> <br>
@@ -137,7 +137,7 @@
 
         		<a href="/unnamed-incorporated/InfoPage.html">Info</a>
 
-       		 	<a href="/unnamed-incorporated/ResturantPage">Restaurants</a>
+       		 	<a class="active" href="/unnamed-incorporated/ResturantPage">Restaurants</a>
 
     		</div>
     	</div>
