--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -101,10 +101,10 @@
 		    	<div style="padding:calc(5%); border:1px solid black">
 		    		<h2>Sign In</h2>
 		    		<form action="SignIn" method="POST">
-		    			<input type="radio" id="userIn" name="loginType" value="0">
-		    			<label for="userIn">User</label>
-		    			<input type="radio" id="restaurantIn" name="loginType" value="1">
-		    			<label for="restaurantIn">Restaurant</label> <br> <br>
+		    			<input type="radio" id="custIn" name="type" value="cust">
+		    			<label for="custIn">Customer</label>
+		    			<input type="radio" id="restIn" name="type" value="rest">
+		    			<label for="restIn">Restaurant</label> <br> <br>
 		    			Username: <br>
 		    			<input type="text" name="usernameIn"> <br> <br>
 		    			Password: <br>
@@ -117,7 +117,7 @@
 		    		<h2>Register</h2>
 		    		<form action="Register" method="POST">
 		    			<input type="radio" id="userReg" name="registerType">
-		    			<label for="userReg">User</label>
+		    			<label for="userReg">Customer</label>
 		    			<input type="radio" id="restaurantReg" name="registerType">
 		    			<label for="restaurantReg">Restaurant</label> <br> <br>
 		    			Username: <br>
