--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -137,7 +137,9 @@
 
         		<a href="/unnamed-incorporated/InfoPage.html">Info</a>
 
-       		 	<a class="active" href="/unnamed-incorporated/ResturantPage">Restaurants</a>
+       		 	<a href="/unnamed-incorporated/ResturantPage">Restaurants</a>
+       		 	
+       		 	<a href="/unnamed-incorporated/LogOut">Log Out</a>
 
     		</div>
     	</div>
