Linking changes for info page

--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -31,7 +31,7 @@
 
         <a class="active" href="/unnamed-incorporated/HomePage.html">Home</a>
 
-        <a href="/unnamed-incorporated/InfoPage.html">Info</a>
+        <a href="/unnamed-incorporated/UserReservation">Info</a>
 
         <a href="/unnamed-incorporated/ResturantPage">Restaurants</a>
         
