--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -135,7 +135,7 @@
 
         		<a href="/unnamed-incorporated/HomePage.html">Home</a>
 
-        		<a href="/unnamed-incorporated/InfoPage.html">Info</a>
+        		<a href="/unnamed-incorporated/UserReservation">Info</a>
 
        		 	<a href="/unnamed-incorporated/ResturantPage">Restaurants</a>
        		 	
