--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -101,7 +101,7 @@
 		    	<div style="padding:calc(5%); border:1px solid black">
 		    		<h2>Sign In</h2>
 		    		<form action="SignIn" method="POST">
-		    			<input type="radio" id="custIn" name="type" value="cust">
+		    			<input type="radio" id="custIn" name="type" value="cust" checked>
 		    			<label for="custIn">Customer</label>
 		    			<input type="radio" id="restIn" name="type" value="rest">
 		    			<label for="restIn">Restaurant</label> <br> <br>
@@ -116,7 +116,7 @@
 		     	<div style="padding:calc(5%); border:1px solid black">
 		    		<h2>Register</h2>
 		    		<form action="Register" method="POST">
-		    			<input type="radio" id="userReg" name="registerType">
+		    			<input type="radio" id="userReg" name="registerType" checked>
 		    			<label for="userReg">Customer</label>
 		    			<input type="radio" id="restaurantReg" name="registerType">
 		    			<label for="restaurantReg">Restaurant</label> <br> <br>
