Change action in register form

--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -115,7 +115,7 @@
 		    	
 		     	<div style="padding:calc(5%); border:1px solid black">
 		    		<h2>Register</h2>
-		    		<form action="Register" method="POST">
+		    		<form action="CreateUserAccount" method="POST">
 		    			<input type="radio" id="userReg" name="registerType" checked>
 		    			<label for="userReg">Customer</label>
 		    			<input type="radio" id="restaurantReg" name="registerType">
