Hopefully added functionality

--- a/unnamed-incorporated/WebContent/HomePage.html
+++ b/unnamed-incorporated/WebContent/HomePage.html
@@ -20,7 +20,7 @@
 
     <div class="center">
         <h1>Remote Reservation Services</h1>
-        <form action="InsertContact" method="POST">
+        <form action="Results" method="POST">
             <input type="text" name="keyword" style="width: 600px; height=60px;" size="20"> <br />
 
             <input type="submit" value="Search" />
