Working on restaurant creation

--- a/unnamed-incorporated/WebContent/CreateRestaurantInformation.html
+++ b/unnamed-incorporated/WebContent/CreateRestaurantInformation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <body>
+<form action="CreateUserAccount" method="POST">
 	Restaurant Name: <br>
 	<input type="text" name="resName"> <br> <br>
 	Description: <br>
@@ -15,6 +16,7 @@
 	Hours: <br>
 	<input type="text" name="resHours"> <br> <br>
 	<input type="submit" value="Register Information">
+</form>
 </body>
 </head>
 </html>
