--- a/unnamed-incorporated/WebContent/SignIn.html
+++ b/unnamed-incorporated/WebContent/SignIn.html
@@ -94,7 +94,7 @@
     	
 	    <div style="display:flex; flex-direction:column; height:100%">
 		    <div style="padding:15px; height:25px; font-weight:bold; font-size:25px">
-		     	Title
+		     	Sign In
 		    </div>
 		    
 		    <div style="display:flex; flex-direction:row; justify-content:center; height:calc(100% - 55px); padding-top:calc(5%); padding-bottom:calc(5%)">
@@ -119,16 +119,16 @@
 		    			<input type="radio" id="userReg" name="registerType" value="cust" checked>
 		    			<label for="userReg">Customer</label>
 		    			<input type="radio" id="restaurantReg" name="registerType" value="rest">
-		    			<label for="restaurantReg">Restaurant</label> <br> <br>
+		    			<label for="restaurantReg">Restaurant</label> <br>
 		    			Username: <br>
-		    			<input type="text" name="usernameReg"> <br> <br>
+		    			<input type="text" name="usernameReg"> <br>
 		    			Password: <br>
-		    			<input type="password" name="passwordReg"> <br> <br>
+		    			<input type="password" name="passwordReg"> <br>
 		    			Confirm Password: <br>
-		    			<input type="password" name="passwordRegConfirm"> <br> <br>
+		    			<input type="password" name="passwordRegConfirm"> <br>
+		    			<input type="submit" value="Register">
 		    		</form>
 		    	</div>
-		    	<input type="submit" value="Register">
 		    </div>
 		    <div class="nav">
 
