Buttons Work with Multiple Results.

--- a/unnamed-incorporated/WebContent/Results.html
+++ b/unnamed-incorporated/WebContent/Results.html
@@ -52,14 +52,13 @@
         
         <form id="select" action="ResturantPage" method="POST">
             <input type="hidden" id=rest name=rest value=Hello>
-            <li onclick="select.submit();">
-            <div href class=res>
+            <li onclick="select.submit()">
+            <div class=res>
                 <a>Restaurant Name</a>
                 <a class=right>Location</a>
-                
             </div>
-        </li>
-    </form>
+        	</li>
+    	</form>
     </ul>
 
     <div class="nav">
