Fixed Multiple Search Results.

--- a/unnamed-incorporated/WebContent/Results.html
+++ b/unnamed-incorporated/WebContent/Results.html
@@ -51,7 +51,7 @@
     <ul>
         
         <form id="select" action="ResturantPage" method="POST">
-            <input type="hidden" id=rest name=rest value=Hello>
+            <input type="hidden" id="rest" name="rest" value="Hello">
             <li onclick="select.submit()">
             <div class=res>
                 <a>Restaurant Name</a>
